Fixed spacing in new shout sidebar

--- a/app/assets/stylesheets/_sidebars.scss
+++ b/app/assets/stylesheets/_sidebars.scss
@@ -121,3 +121,7 @@
 		margin-bottom: 20px;
 	}
 }
+
+.wrapper .new-shout-page .badge-list .well {
+	padding-top: 20px;
+}
